style.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  /* background: no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover; */
  background-color: rgb(67, 126, 168);
  color: white;
  font-family: Arial, Helvetica, sans-serif;
  /* text-shadow: 0px 0px 20px #aaaaaa; */
}

main {
  padding: 10px;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

div.top {
  display: flex;
  justify-content: space-between;
}

div.middle {
  display: flex;
  justify-content: space-between;
  margin-top: 10px;
  border-bottom: 3px solid grey;
  padding-bottom: 10px;
}

div.top-left {
  background-color: rgba(255, 255, 255, 0.1);
  padding: 10px;
  text-align: center;
  /* min-height: 100px; */
  width: 49.5%;
  border-radius: 5px;
}

.blockquote {
  margin: 5px;
  padding: 10px;
  background: #f8fffe;
  border-left: 25px solid #b0d2cb;
  color: rgb(67, 126, 168);
  border-radius: 4px;
  height: 95%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.quote {
  font-family: "Gelasio", serif;
  font-style: italic;
  font-size: 1.5rem;
  line-height: 2.5rem;
  margin-bottom: 5px;
}
.author {
  font-family: "Gelasio", serif;
  font-style: normal;
  font-weight: bold;
  text-align: right;
  font-size: 1.6rem;
}

.author::before {
  content: "\2014\0020";
}

div.top-right {
  background-color: rgba(255, 255, 255, 0.1);
  padding: 5px;
  /* text-align: center; */
  /* min-height: 100px; */
  width: 49.5%;
  border-radius: 5px;
  display: flex;
  /* flex-direction: column; */
  justify-content: space-between;
}

div.weather {
  background: #000000d0;
  display: flex;
  flex-direction: column;
  align-items: center;
  opacity: 0.8;
  border-radius: 5px;
  margin: 5px;
  padding: 5px;
  width: 50%;
}

.weather-icon {
  display: inline-block;
  height: 70px;
  width: 70px;
  vertical-align: top;
}

.weather-info {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
}

.weather-info p {
  margin: 15px;
}
.date-time {
  text-align: center;
  margin: 5px auto;
  margin-top: 50px;
}

div.middle-right {
  background-color: rgba(255, 255, 255, 0.1);
  padding: 10px;
  text-align: center;
  min-height: 250px;
  width: 49%;
  border-radius: 5px;
}

/* ***** START TIMER STYLING ***** */
.middle-left {
  background-color: rgba(255, 255, 255, 0.1);
  /* background-color: #f5e4c3; */
  /* margin: 0 auto; */
  min-height: 250px;
  width: 49.5%;
  border-radius: 5px;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(3, 1fr);
}

div.middle-right {
  background-color: rgba(255, 255, 255, 0.1);
  padding: 10px;
  text-align: center;
  min-height: 250px;
  width: 49.5%;
  border-radius: 5px;
}

/*timers*/
.label {
  align-self: center;
  justify-self: center;

  font-size: 30px;
  font-weight: bold;
}

#work {
  grid-area: 1 / 2 / 1 / 2;
}
#break {
  grid-area: 1 / 4 / 1 / 4;
}
#cycles {
  grid-area: 1 / 3 / 1 / 3;
}

.timer {
  display: flex;
  align-self: center;
  justify-self: center;

  font-size: 30px;
  font-weight: bold;
}

p {
  margin: 0;
  padding: 0;
}

#counter {
  grid-area: 2 / 3 / 2 / 3;
  color: pink;
}

#work-timer {
  grid-area: 2 / 2 / 2 / 2;
}

#break-timer {
  grid-area: 2 / 4 / 2 / 4;
}

/*buttons*/

.btn {
  align-self: center;
  justify-self: center;

  width: 100px;
  height: 30px;

  font-size: 15px;
  font-weight: bold;
  color: rgb(67, 126, 168);
  background-color: #fff;

  border: none;
  border-radius: 4px;
  transition: all 0.3s ease-in-out;
}

.btn:hover {
  transform: scale(0.98);
  color: #fff;
  background-color: rgb(103, 170, 218);
  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.1);
}

#start {
  grid-area: 3 / 2 / 3 / 2;
}

#reset {
  grid-area: 3 / 3 / 3 / 3;
}

#stop {
  grid-area: 3 / 4 / 3 / 4;
}

.image-item {
  width: 50px;
  height: 50px;
}

.counter-list {
  list-style-type: none;
  margin: 5px;
  padding: 5px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.li-item {
  display: inline;
  margin: 5px;
  padding: 5px;
}

/* ***** START NOTES STYLING ***** */

div.bottom {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}
.note-buttons {
  align-self: start;
}
.notes-container {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding-top: 0.5rem;
}

.add {
  background-color: #008ea7ce;
  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.1);
  /* background-color: #9ec862; */
  color: #fff;
  border: none;
  border-radius: 3px;
  padding: 0.6rem 0.8rem;
  margin: 0.6rem;
  cursor: pointer;
  font-weight: bold;
}

.add:hover {
  transform: scale(0.95);
  background-color: #008ea7;
}

.note {
  background-color: #fff;
  color: #222;
  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.1);
  margin: 15px 25px;
  height: 250px;
  width: 400px;
}

.note .tools {
  background-color: #008ea7ce;
  /* background-color: #9ec862; */
  color: #fff;
  display: flex;
  justify-content: flex-end;
  padding: 0.5rem;
}

.note .tools button {
  background-color: transparent;
  border: none;
  color: #fff;
  cursor: pointer;
  font-size: 1rem;
  margin-left: 0.5rem;
}

.note .tools button:hover {
  transform: scale(0.9);
  color: #222;
}

.note textarea {
  outline: none;
  font-family: inherit;
  font-size: 1.2rem;
  border: none;
  height: 250px;
  width: 100%;
  padding: 10px;
}

.main-note {
  padding: 20px;
}

.hidden {
  display: none;
}

/* ***** END NOTES STYLING ***** */

/* ***** START Responsive STYLING ***** */

@media (max-width: 600px) {
  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
  div.top {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }
  div.top-left {
    width: 100%;
    margin-bottom: 10px;
  }

  div.top-right {
    width: 100%;
  }
}

@media (min-width: 250px) and (max-width: 649px) {
  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
  div.middle {
    display: flex;
    flex-direction: column;
  }
  div.middle-left {
    width: 100%;
    margin-bottom: 10px;
  }

  div.middle-right {
    width: 100%;
  }
}

